[package]
name = "alarm"
version = "0.1.0"
authors = ["Ed Page <epage@gmail.com>"]
edition = "2018"
description = "Error container"
repository = "https://github.com/epage/alarm"
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
send_sync = []

[dependencies]
indexmap = "1.3"

[dev-dependencies]
derive_more = "0.99"
