[package]
name = "status"
version = "0.0.4"
authors = ["Ed Page <epage@gmail.com>"]
edition = "2018"
description = "Error container"
repository = "https://github.com/epage/status"
documentation = "https://docs.rs/status"
readme = "README.md"
keywords = ["error", "ergonomic", "library"]
categories = ["rust-patterns"]
license = "MIT OR Apache-2.0"

[features]
default = ["std"]
std = []
send_sync = []

[dependencies]
indexmap = "1.3"

[dev-dependencies]
derive_more = "0.99"
static_assertions = "1.1.0"
